replace save method with create and update, fix test accordingly